# passgen-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  mypy.ini  pyproject.toml  setup.py
src/: __init__.py  cli.py  languages.py  manager.py  password_manager.py
tests/: conftest.py  test_cli.py  test_manager.py
